<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_nosotros">

    <!-- Fragmento Nosotros -->
    <fragment
        android:id="@+id/navigation_nosotros"
        android:name="com.example.myapplication.NosotrosFragment"
        android:label="@string/nosotros_title"
        tools:layout="@layout/fragment_nosotros" />

    <!-- Fragmento Testimonios -->
    <fragment
        android:id="@+id/navigation_testimonios"
        android:name="com.example.myapplication.TestimoniosFragment"
        android:label="@string/testimonios_title"
        tools:layout="@layout/fragment_testimonios" />

    <!-- Fragmento Productos -->
    <fragment
        android:id="@+id/navigation_productos"
        android:name="com.example.myapplication.ProductosFragment"
        android:label="@string/productos_title"
        tools:layout="@layout/fragment_productos" />

    <!-- Mantener los fragmentos originales para compatibilidad -->
    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.example.myapplication.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">
        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
    </fragment>

    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.example.myapplication.SecondFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">
        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>
</navigation>